force-app/main/default/objects/Resultado_de_aportes__c/Resultado_de_aportes__c.object-meta.xml
<CustomObject>
    <label>Resultado de Aportes</label>
    <nameField>
        <displayFormat>ER-{0000000000}</displayFormat>
        <label>Nombre de Resultado de aportes</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resultados de Aportes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>