force-app/main/default/objects/Resultado_de_aportes__c/fields/Num_Identidad__c.field-meta.xml
<CustomField>
    <fullName>Num_Identidad__c</fullName>
    <label>Num Identidad</label>
    <length>20</length>
    <type>Text</type>
</CustomField>