force-app/main/default/objects/Resultado_de_aportes__c/fields/Planilla__c.field-meta.xml
<CustomField>
    <fullName>Planilla__c</fullName>
    <label>Planilla</label>
    <referenceTo>Planilla__c</referenceTo>
    <relationshipLabel>Resultados de Aportes</relationshipLabel>
    <relationshipName>Resultados_de_Aportes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>